2007-04-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Fixed some bugs related to database support.

2007-04-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Added a lot of examples to the manuals.

2007-04-05  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Updated parts of the documentation.

	* R/textdoccol.R (asPlain): Added conversion from newsgroup
	documents to plain text documents.

2007-04-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Finished experimental database support. Not yet
	intensively tested.

	* R/source.R: Now each source has a default reader.

	* R/reader.R: \code{FunctionGenerator} is now an attribute, not a
	class anymore.

	* R/plaintextdoc.R: Custom show method for plain text documents.

	* R/aobjects.R: Added a class for structured text documents.

	* R/reader.R: Replaced remaining \code{parser} occurrences with
	\code{reader}.

	* R/textdoccol.R (summary): Indent tags. 

	* R/textdoccol.R (removePunctuation): Transform method to remove
	punctuation marks.

2007-03-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (sFilter): Simplified sFilter significantly by
	using prescindMeta().

2007-03-18  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Improved database support.

2007-03-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (TermDocMatrix): Uses sparse matrices.

	* R/resolve.R (resolveISOcode): Extracts the language from a ISO
	language code.

	* R/textdoccol.R (TextDocCol): Refactored several parser arguments
	into parserControl argument.

	* R/aobjects.R (TextDocument): Introduced the "Language" slot.

2007-03-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* Work/tmDataSetup.R: The datasets acq and crude can now be
	created on the fly.

	* R/stopwords.R: Introduced a function returning the stopwords for
	a given language (English, German and French at the moment)

	* R/textdoccol.R (stemDoc): Stemming uses Rstem if available,